--- a/01-fundamentos-reactjs-ts/index.html
+++ b/01-fundamentos-reactjs-ts/index.html
@@ -9,9 +9,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-    
-    <title>Vite + React + TS</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Ignite Feed with Typescript</title>
   </head>
   <body>
     <div id="root"></div>
